# file-sharing-system

./: .gitignore  README.md  docker-compose.yaml
backend/: .env  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 395e15f973bd_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  database.py  middlewares.py
backend/app/crud/: file.py  user.py
backend/app/models/: __init__.py  file.py  file_access.py  user.py
backend/app/routes/: file.py  user.py
backend/app/schemas/: auth.py  file.py  user.py
backend/app/utils/: auth.py  files.py  users.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.vue  api.js  main.js
frontend/src/components/: FileActions.vue  FileList.vue  FileUploadForm.vue  GrantAdmin.vue  Login.vue  Navigation.vue  Register.vue  UploadFile.vue  UserStatistics.vue
frontend/src/router/: index.js
frontend/src/store/: store.js
